a lot of things

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs=-Xmx3G
 
-modId=fabric-mod-template
-modName=Fabric Mod Template
-modDescription=Template for Xander's mods with extra gradle goodies.
+modId=adaptive-tooltips
+modName=Adaptive Tooltips
+modDescription=Highly configurable tooltip rendering, so they always fit on the screen.
 
 curseforgeId=
 modrinthId=
-githubProject=isXander/FabricModTemplate
+githubProject=isXander/AdaptiveTooltips
