--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,12 +7,12 @@ cursegradle = "2.+"
 github_release = "2.+"
 machete = "1.+"
 
-minecraft = "1.19.2"
-yarn = "28"
+minecraft = "1.19.3-pre2"
+yarn = "1"
 fabric_loader = "0.14.10"
-fabric_api = "0.66.0+1.19.2"
-yacl = "1.7.1"
-mod_menu = "4.0.6"
+fabric_api = "0.67.1+1.19.3"
+yacl = "2.0.0+1.19.3-SNAPSHOT"
+mod_menu = "5.0.0-alpha.4"
 mixin_extras = "0.1.1"
 
 [libraries]
