--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,11 @@ cursegradle = "2.+"
 github_release = "2.+"
 machete = "1.+"
 
-minecraft = "1.19.3-rc1"
-yarn = "4"
+minecraft = "1.19.3"
+yarn = "1"
 fabric_loader = "0.14.11"
 fabric_api = "0.68.1+1.19.3"
-yacl = "2.0.0+1.19.3-SNAPSHOT"
+yacl = "2.0.0"
 mod_menu = "5.0.0-alpha.4"
 mixin_extras = "0.1.1"
 
