--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
-loom = "1.0.+"
-loom_quiltflower = "1.7.+"
+loom = "1.1.+"
+loom_quiltflower = "1.8.+"
 
-minotaur = "2.4.+"
+minotaur = "2.5.+"
 cursegradle = "2.+"
 github_release = "2.+"
 machete = "1.+"
 
-minecraft = "1.19.3"
-yarn = "3"
-fabric_loader = "0.14.11"
-fabric_api = "0.69.1+1.19.3"
-yacl = "2.1.1"
-mod_menu = "5.0.0"
-mixin_extras = "0.1.1"
+minecraft = "1.19.4-rc1"
+yarn = "1"
+fabric_loader = "0.14.17"
+fabric_api = "0.75.1+1.19.4"
+yacl = "2.3.0+beta.3+update.1.19.4-SNAPSHOT"
+mod_menu = "6.1.0-alpha.1"
+mixin_extras = "0.2.0-beta.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
