--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,17 +2,17 @@
 loom = "1.1.+"
 loom_quiltflower = "1.8.+"
 
-minotaur = "2.5.+"
+minotaur = "2.6.+"
 cursegradle = "2.+"
 github_release = "2.+"
 machete = "1.+"
 
-minecraft = "1.19.4-rc1"
+minecraft = "1.19.4"
 yarn = "1"
 fabric_loader = "0.14.17"
-fabric_api = "0.75.1+1.19.4"
-yacl = "2.3.0+beta.3+update.1.19.4-SNAPSHOT"
-mod_menu = "6.1.0-alpha.1"
+fabric_api = "0.76.0+1.19.4"
+yacl = "2.3.0"
+mod_menu = "6.1.0-rc.1"
 mixin_extras = "0.2.0-beta.1"
 
 [libraries]
