--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
-loom = "1.0.+"
-loom_quiltflower = "1.7.+"
+loom = "1.3.+"
+loom_vineflower = "1.11.+"
 
-minotaur = "2.4.+"
+minotaur = "2.7.+"
 cursegradle = "2.+"
 github_release = "2.+"
-machete = "1.+"
+machete = "2.+"
 
-minecraft = "1.19.3"
-yarn = "3"
-fabric_loader = "0.14.11"
-fabric_api = "0.69.1+1.19.3"
-yacl = "2.1.1"
-mod_menu = "5.0.0"
-mixin_extras = "0.1.1"
+minecraft = "1.20.2"
+quilt_mappings = "2"
+fabric_loader = "0.14.22"
+fabric_api = "0.89.1+1.20.2"
+yacl = "3.2.1+1.20.2"
+mod_menu = "8.0.0"
+mixin_extras = "0.2.0-rc.4"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 fabric_loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric_loader" }
 
 fabric_api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric_api" }
-yacl = { module = "dev.isxander:yet-another-config-lib", version.ref = "yacl" }
+yacl = { module = "dev.isxander.yacl:yet-another-config-lib-fabric", version.ref = "yacl" }
 mod_menu = { module = "com.terraformersmc:modmenu", version.ref = "mod_menu" }
-mixin_extras = { module = "com.github.llamalad7:mixinextras", version.ref = "mixin_extras" }
+mixin_extras = { module = "com.github.llamalad7.mixinextras:mixinextras-fabric", version.ref = "mixin_extras" }
 
 [plugins]
 loom = { id = "fabric-loom", version.ref = "loom" }
-loom_quiltflower = { id = "io.github.juuxel.loom-quiltflower", version.ref = "loom_quiltflower" }
+loom_quiltflower = { id = "io.github.juuxel.loom-vineflower", version.ref = "loom_vineflower" }
 
 minotaur = { id = "com.modrinth.minotaur", version.ref = "minotaur" }
 cursegradle = { id = "me.hypherionmc.cursegradle", version.ref = "cursegradle" }
